# rust-shuttle-axum-backend

./: Cargo.toml  README.md
src/: main.rs  openapi.json
src/actions/: create.rs  mod.rs
