[package]
name = "rust-axum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-swagger-ui = "0.3.0"
postgres = "0.19.9"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"
tokio-postgres = "0.7"
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
